<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tvHeadline"
        android:id="@+id/tvHeadline"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignLeft="@+id/tvHeadline"
        android:layout_alignStart="@+id/tvHeadline"
        android:layout_below="@+id/tvHeadline"
        android:layout_alignRight="@+id/tvHeadline"
        android:layout_alignEnd="@+id/tvHeadline"
        android:layout_marginTop="20dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSpf"
            android:id="@+id/btnSpf"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/abc_button_inset_vertical_material"
            android:background="#fff08c35"
            android:onClick="ShowToast"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnScore"
            android:id="@+id/btnScore"
            android:layout_below="@+id/btnSpf"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:enabled="true"
            android:layout_marginTop="@dimen/abc_button_inset_vertical_material"
            android:background="#fff08c35"
            android:onClick="ShowToast"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnLibrary"
            android:id="@+id/btnLibrary"
            android:enabled="true"
            android:layout_below="@+id/btnScore"
            android:layout_centerHorizontal="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/abc_button_inset_vertical_material"
            android:background="#fff08c35"
            android:onClick="ShowToast"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnBuild"
            android:id="@+id/btnBuild"
            android:layout_below="@+id/btnLibrary"
            android:layout_centerHorizontal="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/abc_button_inset_vertical_material"
            android:background="#fff08c35"
            android:onClick="ShowToast"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnXyz"
            android:id="@+id/btnXYZ"
            android:layout_below="@+id/btnBuild"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/abc_button_inset_vertical_material"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:background="#fff08c35"
            android:onClick="ShowToast"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCaps"
            android:id="@+id/btnCaps"
            android:layout_below="@+id/btnXYZ"
            android:layout_centerHorizontal="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/abc_button_inset_vertical_material"
            android:background="#fff08c35"
            android:onClick="ShowToast"/>
    </RelativeLayout>

</RelativeLayout>
